# tau-agent

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  session.py  tau.py  tools.py
.github/workflows/: ci.yml
tau/: __init__.py  __main__.py  app.py  session.py  tools.py
tests/: fault_proxy.py  smoke_faults.py  smoke_fizzbuzz.py
