[project]
name = "tau-agent"
version = "0.1.0"
description = "Tau — a coding-agent chat bot demo built with the ai library and Textual"
requires-python = ">=3.12"
dependencies = [
    "ai",
    "textual>=3.0",
]

[project.scripts]
tau = "tau.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tau"]

[tool.uv.sources]
ai = { path = "../..", editable = true }

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "mypy~=2.1.0",
    "ruff>=0.15.12",
]
