[project]
name = "tau-agent"
version = "0.1.0"
description = "Tau — a coding-agent chat bot demo built with the ai library and Textual"
requires-python = ">=3.12"
dependencies = [
    "ai[anthropic,openai]",
    "textual>=3.0",
]

[project.scripts]
tau = "tau.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tau"]

[tool.uv.sources]
ai = { git = "https://github.com/vercel-labs/ai-python.git", rev = "3dc99b6c9d3d210406ac801878847d92cd8527e2" }

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "mypy~=2.1.0",
    "poethepoet>=0.30",
    "ruff>=0.15.12",
]

[tool.poe.tasks]
format-check = "ruff format --check"
format = "ruff format"
lint = "ruff check ."
lint-fix = "ruff check --fix ."
type = "mypy tau"
check = ["format-check", "lint", "type"]
fix = ["lint-fix", "format"]
